z-index cards fixed

--- a/src/css/Perfil.module.css
+++ b/src/css/Perfil.module.css
@@ -131,6 +131,17 @@
     /* z-index: 9999; */
   }
 
+  .modalOverlayQuarters {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 9999;
+  }
+
   .modalOverlayRecibo {
     position: fixed;
     top: 0;
@@ -565,3 +576,11 @@
   padding: 10px; /* Establece el relleno del contenedor del PDF */
 }
 
+.botonRecibo{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  color: #007AFF;
+  margin: 5px;
+}
